en esta version se agrego el multiselect, la hora de creacion o actualizacion, tambien el orden en que deben registrarse en la lista todas las notas entre otras cosas

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="email">email</string>
     <string name="password">password</string>
     <string name="action_sign_in">sign in</string>
+    <string name="date">timestamp</string>
 </resources>
